TAN-53 Return expire_date in POST/auth/login
